SOS-1014 - Fix spacing of columns in Doc View Table

--- a/themes/so-theme/docroot/_diffs/css/custom.css
+++ b/themes/so-theme/docroot/_diffs/css/custom.css
@@ -236,7 +236,6 @@ a:focus .opens-new-window-accessible {
 	}
 }
 
-
 /* ---------- Portlets ---------- */
 
 .portlet {
@@ -772,7 +771,7 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 				color: #5A5A5A;
 				text-shadow: none;
 			}
-		 }
+		}
 	}
 }
 
@@ -858,7 +857,7 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 /* ---------- Search Iterator ---------- */
 
 .taglib-search-iterator {
-	 .result-title img {
+	.result-title img {
 		margin-right: .5em;
 	}
 
@@ -1533,6 +1532,18 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 	.aui-fieldset-content, .lfr-dynamic-uploader {
 		padding: 10px;
 	}
+
+	table .lfr-actions {
+		.lfr-trigger strong {
+			min-width: 0;
+			width: auto;
+		}
+
+		&.show-arrow.direction-down .lfr-trigger strong a {
+			background-position: 100% -3px;
+			padding: 2px 10px;
+		}
+	}
 }
 
 .portlet-document-library, .portlet-document-library-display {
@@ -1546,6 +1557,10 @@ input[type=button], input[type=reset], input[type=submit], .aui-state-hover, .co
 
 	.taglib-ratings.stars .aui-rating-content, .taglib-ratings.stars .liferay-rating-score {
 		min-width: 200px;
+	}
+
+	table.taglib-search-iterator {
+		table-layout: auto;
 	}
 
 	.version-history .results-grid .lfr-actions .lfr-trigger strong {
@@ -2267,7 +2282,6 @@ body.so-layout-fluid, body.so-layout-fluid-ad {
 		}
 	}
 }
-
 
 /* ---------- Extras ---------- */
 
